--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
      .fonts {color:white;}
     </style>
 
-	<title>Pring Hindi IC</title>
+	<title>krizia mae arciaga</title>
 	<%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -16,13 +16,13 @@
 
   </head>
 
-  <body style="background-color: red;">
+  <body style="background-color: blue;">
 	<!-- Navigation -->
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
 				
-				<%= link_to "PringHindiIC", root_url, class: "navbar-brand fonts" %>
+				<%= link_to "krizia mae arciaga", root_url, class: "navbar-brand fonts" %>
 			</div>
 	        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
